styling changes to searchbar, changed row sizes to fix empty white space on the page

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h3{
 .main-container{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: .3fr 1fr;
+    grid-template-rows: .3fr 2fr;
     grid-template-areas:
         "sidebar header"
         "sidebar projects";
@@ -31,7 +31,7 @@ h3{
 .projects{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 20% 20% 20%;
     grid-template-areas: 
     "firstcard secondcard"
     "thirdcard fourthcard"
@@ -39,9 +39,11 @@ h3{
     padding-top: 10px;
     padding-left: 30px;
     background-color: #efeff5;
-    gap: 50px;
-    padding-right: 50px;
+    gap: 100px;
+     padding-right: 50px;
 }
+
+
 
 .firstcard{
     grid-area: firstcard;
@@ -71,11 +73,11 @@ h3{
     grid-area: sidebar;
     display: flex;
     flex-direction: column;
-    background-color: rgba(13, 129, 182, 0.88);
+    background-color: #1992d4;
     color: rgb(232, 230, 227);
     font-weight: bold;
-    justify-content: space-evenly;
-    height: 100vh;
+    align-items: flex-start;
+    padding: 20px;
 }
 
 .main-content{
@@ -86,13 +88,15 @@ h3{
 }
 
 .sidebar p {
-    padding-left: 35px;
+    padding-left: 10px;
 }
 
 #searchbar{
-    border-radius: 5px;
+    border-radius: 15px;
     width: 100%;
     height: 20px;
+    border-color: transparent;
+    background-color: #e2e8f0;
 }
 
 .searchmag{
@@ -166,6 +170,7 @@ i.fa-solid.fa-magnifying-glass {
     border-radius: 20px;
     border-left: 15px solid orange;
    box-shadow:  2px 5px 10px grey;
+   height: 100%;
 }
 
 .hero-projects{
@@ -225,4 +230,126 @@ i.fa-solid.fa-magnifying-glass {
 
 .social-head{
     background-color: #efeff5;
+}
+
+.grid-wrapper {
+    display: flex;
+}
+
+.trending-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.trending p{
+    font-size: 16px;
+}
+
+.account{
+    display: flex;
+}
+
+.flex1{
+    display: flex;
+    justify-content: center;
+    margin-right: 50px;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.flex2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 50px;
+}
+
+.flex3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 50px;
+}
+
+#img3{
+    height: 20px;
+    width: 20px;
+}
+
+.flex4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 25px;
+}
+
+#img4{
+    height: 20px;
+    width: 20px;
+}
+
+.flex5{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: -1px;
+}
+
+#img5{
+    height: 20px;
+    width: 20px;
+}
+
+.flex6{
+    display: flex;
+    align-items: center;
+}
+
+#img6{
+    height: 20px;
+    width: 20px;
+}
+
+.flex7{
+    display: flex;
+    align-items: center;
+}
+
+#img7{
+    height: 20px;
+    width: 20px;
+}
+
+.sidebar3 {
+    margin-top: 50px;
+}
+
+.flex8{
+    display: flex;
+    align-items: center;
+}
+
+#img8{
+    height: 20px;
+    width: 20px;
+}
+
+.flex9{
+    display: flex;
+    align-items: center;
+}
+
+#img9{
+    height: 20px;
+    width: 20px;
+}
+
+.flex10{
+    display: flex;
+    align-items: center;
+}
+
+#img10{
+    height: 20px;
+    width: 20px;
 }
